<resources>
    <!-- All comments are notes to translators. -->
    <string name="app_name">LocaleText</string>

    <!-- The Help option in the options menu, no more than 30 chars. -->
    <string name="action_help">Help</string>

    <string name="action_language">Language</string>

    <!-- The description includes a parenthetical expression.  -->
    <string name="description">Nougat is a family of confections made with sugar or honey, roasted nuts (almonds, walnuts, pistachios, hazelnuts, and macadamia nuts are common), whipped egg whites, and sometimes chopped candied fruit. It is used in a variety of candy bars and chocolates. </string>

    <!-- The product name includes "Package" to define a pack.  -->
    <string name="nougat">Nougat Candy Package</string>

    <!-- Do not translate.  -->
    <string name="support_phone" translatable="false">+14155551212</string>

    <!-- Support Department should be capitalized.  -->
    <string name="help_text">If you need help, contact our Support Department.</string>

    <!-- Do not translate.  -->
    <string name="dial_log_message">Can\'t resolve app for ACTION_DIAL Intent.</string>


    <string name="expired_label">Expired:</string>
    <string name="input_text">Enter the price per item:</string>
    <string name="submit_btn">Submit</string>
    <string name="price_text">Total price for 100 pax:</string>

</resources>