<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.localetextstarter.MainActivity"
    tools:showIn="@layout/activity_main">

<!--    <TextView-->
<!--        android:id="@+id/heading"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="@dimen/standard_margin"-->
<!--        android:layout_marginTop="@dimen/standard_margin"-->
<!--        android:text="@string/nougat"-->
<!--        android:textAppearance="@style/TextAppearance.AppCompat.Headline"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintLeft_toRightOf="@+id/product_image"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <ImageView-->
<!--        android:id="@+id/product_image"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:srcCompat="@drawable/nougat"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:layout_marginTop="@dimen/standard_margin"-->
<!--        android:layout_marginLeft="@dimen/standard_margin"-->
<!--        app:layout_constraintLeft_toLeftOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/description"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/description"-->
<!--        android:layout_marginTop="0dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/heading"-->
<!--        app:layout_constraintLeft_toRightOf="@id/product_image"-->
<!--        android:layout_marginLeft="@dimen/standard_margin"-->
<!--        android:layout_marginRight="@dimen/standard_margin"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0" />-->

<!--    <TextView-->
<!--        android:id="@+id/date_label"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="@string/expired_label"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toEndOf="@+id/product_image"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/description" />-->

    <TextView
        android:id="@+id/heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/nougat"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nougat" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/product_image"
        app:layout_constraintTop_toBottomOf="@id/heading" />

        <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/expired_label"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        app:layout_constraintStart_toEndOf="@+id/date_label"
        app:layout_constraintTop_toTopOf="@+id/date_label"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/tv_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_label"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp"
        android:textColor="#3F51B5"/>

    <EditText
        android:id="@+id/input_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@+id/tv_input"
        android:paddingLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/border"
        android:inputType="number"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/submit_btn"
        android:layout_gravity="center_horizontal"
        android:textColor="#F6F7FB"
        android:backgroundTint="#3F51B5"
        app:layout_constraintTop_toBottomOf="@+id/input_text"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/price_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit" />

    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="@+id/tv_price"
        app:layout_constraintStart_toEndOf="@+id/tv_price"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

</androidx.constraintlayout.widget.ConstraintLayout>
